Fix vert spacing and use enviro var

--- a/src/app/components/mosaic/mosaic.component.scss
+++ b/src/app/components/mosaic/mosaic.component.scss
@@ -73,8 +73,7 @@ mat-form-field {
 
 .totalPage {
     display: flex;
-    flex-wrap: wrap;
-    // gap: 10px;
+    flex-direction: column;
 }
 
 .error {
